# Soren

./: .gitignore  .gitmodules  Research.md  color_parser.py  colors.txt  meson.build
include/: soren_compass.h  soren_enum_parser.h  soren_generics.h  soren_input.h  soren_math.h  soren_std.h
include/collisions/: soren_colliders.h  soren_collision_utils.h  soren_collisions.h  soren_spatial_hash.h
include/e4c/: e4c.h
include/ecs/: soren_scene.h  soren_world_use_collisions.h
include/graphics/: soren_camera.h  soren_graphics.h  soren_padding.h  soren_primitives.h  soren_sprite.h
include/graphics/text/: soren_font.h
include/resources/: soren_json.h  soren_resources.h
include/timing/: soren_stopwatch.h  soren_timer.h
playground/: camera_playground.c  collisions.c  minimal.c  playground.c  run.c  run.h
src/: soren_compass.c  soren_enum_parser.c  soren_generics.c  soren_init.h  soren_math.c  soren_shared.h  soren_std.c
src/collisions/: soren_colliders.c  soren_colliders_box.c  soren_colliders_circle.c  soren_colliders_line.c  soren_colliders_point.c  soren_colliders_polygon.c  soren_collision_utils.c  soren_collisions.c  soren_collisions_shared.h  soren_spatial_hash.c
src/e4c/: e4c.c
src/ecs/: soren_scene.c  soren_world_use_collisions.c
src/graphics/: soren_graphics.c  soren_primitives.c
src/graphics/sprites/: soren_sprite.c  soren_sprite_atlas.c  soren_sprite_update_mode.c
src/graphics/text/: soren_font.c  soren_font_shared.h  soren_font_ttf.c
src/input/: soren_input.c  soren_input_actions.c  soren_input_gamepad.c  soren_input_mouse_and_keyboard.c  soren_input_shared.h
src/resources/: soren_json.c  soren_resources.c
src/timing/: soren_timer.c
subprojects/: GenericDataStructures.wrap  MystEcs.wrap  sso_string.wrap
